// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image Gradient Custom Gradient 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "minHeight": 250,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
    testID="background-image-image-gradient"
  />
  <BVLinearGradient
    colors={
      Array [
        3422552219,
        10158080,
        10158080,
        3422552219,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Array [
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
        undefined,
      ]
    }
    testID="gradient-image-gradient"
  >
    <View />
  </BVLinearGradient>
</View>
`;

exports[`Storyshots Image Gradient Default 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "minHeight": 250,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/__fixtures__/assets/landscape-1.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
    testID="background-image-image-gradient"
  />
  <BVLinearGradient
    colors={
      Array [
        0,
        1711276032,
        3003121664,
        4278190080,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Array [
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
        undefined,
      ]
    }
    testID="gradient-image-gradient"
  >
    <View />
  </BVLinearGradient>
</View>
`;

exports[`Storyshots Image Gradient Extrem Gradient 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "minHeight": 250,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/__fixtures__/assets/portrait-7-with-text.jpg",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": undefined,
          "width": undefined,
        },
        undefined,
      ]
    }
    testID="background-image-image-gradient"
  />
  <BVLinearGradient
    colors={
      Array [
        0,
        1711276032,
        3003121664,
        4278190080,
      ]
    }
    endPoint={
      Object {
        "x": 0.5,
        "y": 1,
      }
    }
    locations={null}
    startPoint={
      Object {
        "x": 0.5,
        "y": 0,
      }
    }
    style={
      Array [
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ],
        undefined,
      ]
    }
    testID="gradient-image-gradient"
  >
    <View />
  </BVLinearGradient>
</View>
`;
